                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 13-08-2006 updated: mplayer.dll with support for aac and aac+ streams.
 - 13-08-2006 fixed: listcontrol and listcontrolex would wraparound instead of going to ondown if it where at the max page size of the list
 - 13-08-2006 fixed: forgot to comment out some code in controllist.cpp.
 - 13-08-2006 added: size() method to the ControlList in python. Updated some documentation.
 - 12-08-2006 added: xbmc.getGlobalIdleTime() method to python. Updated some documentation.
 - 12-08-2006 fixed: no control was selected on home screen if you logged on as the master user.
 - 11-08-2006 fixed: "Treat Stacks as single file" only worked for files that already had times (since 23-07-2006)
 - 11-08-2006 added: MyPrograms and MyFiles also accept $ROOT as a path when called from ActivateWindow
 - 11-08-2006 added: MyMusicFiles, MyVideoFiles, and MyPictures windows now accept $ROOT to open to the root listing when called from ActivateWindow.
			MyMusicLibrary accepts both $ROOT and Root.
 - 11-08-2006 changed: consider a total time of 0 for a stack, as missing times so it tries again.
 - 11-08-2006 added: xbmc.playercontrol(partymode) - enables / disables party mode.
 - 11-08-2006 changed: renamed region "Great Britain" to "UK" in the english language settings
 - 11-08-2006 updated: German (Austrian) language file (Thnx to CEOMR)
 - 11-08-2006 updated: Dutch language file (Thnx to nightspirit)
 - 11-08-2006 updated: Slovenian language file (Thnx to Peter)
 - 10-08-2006 changed: added useThumbs and TreatAsFolder arguments to the browse dialog in python. Got rid of redundent code and changed some documentation.